campus program added

--- a/public/locales/am/translation.json
+++ b/public/locales/am/translation.json
@@ -27,6 +27,7 @@
     "polkadotAdvancedButton": "የፖልካዶት ትምህርት",
     "resourcesTitle": "ተጨማሪ ምንጮችን ያስሱ",
     "resources": {
+      "campusLead": "የካምፓስ መሪን ይቀላቀሉ",
       "games": "ጨዋታዎች",
       "wallets": "የኪስ ቦርሳዎች",
       "dapps": "ያልተማከለ መተግበሪያዎች",
@@ -39,6 +40,32 @@
       "market": "ገበያ",
       "others": "ሌሎች",
       "comingSoonMessage": "በቅርቡ ይመጣል!"
+    }
+  },
+    "resourcesContent": {
+    "games": {
+      "exiledRacers": { "title": "Exiled Racers", "description": "በፖልካዶት ሥነ-ምህዳር ውስጥ ንቁ ማህበረሰብ እና ሊበጁ የሚችሉ እሽቅድድም ተሽከርካሪዎች ያለው የወደፊት 'ለመንዳት-ለማግኘት' የእሽቅድድም ጨዋታ።" },
+      "ajuna": { "title": "Ajuna Network", "description": "ገንቢዎች በብሎክቼይን ላይ የተመሰረቱ ጨዋታዎችን ከ Unreal እና Unity ጋር እንዲፈጥሩ እና እንዲያዋህዱ የሚያስችል ያልተማከለ የጨዋታ መድረክ።" },
+      "bitCountry": { "title": "Bit.Country", "description": "ለተጠቃሚ-የተፈጠሩ ሜታቨርሶች፣ ማህበራዊ ቦታዎች እና ዲጂታል ኢኮኖሚዎች መድረክ፣ ፈጣሪዎችን በ NFTs እና በምናባዊ ሪል እስቴት የሚያበረታታ።" },
+      "astar": { "title": "Astar Network", "description": "ሁለቱንም EVM እና WASM የሚደግፍ ግንባር ቀደም ፓራቼይን፣ በ dApp staking ባህሪው የበለጸገ የጨዋታዎች እና የ DApps ሥነ-ምህዳርን የሚያጎለብት።" }
+    },
+    "wallets": {
+      "nova": { "title": "Nova Wallet", "description": "ለፖልካዶት እና ኩሳማ ሥነ-ምህዳር የቀጣይ-ትውልድ፣ ለሞባይል-የመጀመሪያ የኪስ ቦርሳ፣ እንደ ስቴኪንግ እና አስተዳደር ያሉ የላቁ ባህሪያትን ያቀርባል።" },
+      "talisman": { "title": "Talisman", "description": "ከፖልካዶት ሥነ-ምህዳር እና ከፓራቼይኖቹ ጋር መስተጋብርን የሚያቃልል ለተጠቃሚ-ተስማሚ የአሳሽ ቅጥያ የኪስ ቦርሳ።" },
+      "polkadotjs": { "title": "Polkadot.js Extension", "description": "የእርስዎን የፖልካዶት መለያዎች ለማስተዳደር እና ከአውታረ መረቡ ጋር ለመገናኘት የመጀመሪያው በአሳሽ ላይ የተመሰረተ ቮልት።" },
+      "subwallet": { "title": "SubWallet", "description": "ለፖልካዶት፣ ለ Substrate እና ለ Ethereum ሥነ-ምህዳሮች አጠቃላይ የኪስ ቦርሳ መፍትሄ፣ እንደ አሳሽ ቅጥያ እና የሞባይል መተግበሪያ ይገኛል።" }
+    },
+    "dapps": {
+      "acala": { "title": "Acala Network", "description": "ያልተማከለ የፋይናንስ (DeFi) ማዕከል፣ የተረጋጋ ሳንቲም፣ ስቴኪንግ እና AMM DEXን ጨምሮ የፋይናንስ መተግበሪያዎችን ስብስብ ያቀርባል።" },
+      "moonbeam": { "title": "Moonbeam", "description": "ከ Ethereum ጋር ተኳሃኝ የሆነ የስማርት ኮንትራት ፓራቼይን፣ በ Substrate-በተመሰረተ አካባቢ የ Solidity ፕሮጀክቶችን ለመገንባት ወይም እንደገና ለማሰማራት ቀላል ያደርገዋል።" },
+      "hydradx": { "title": "HydraDX", "description": "በ Substrate ላይ የተገነባ የፈሳሽነት ፕሮቶኮል፣ ለፖልካዶት የፈሳሽነት ውቅያኖስን ለማምጣት የተነደፈ።" },
+      "bifrost": { "title": "Bifrost Finance", "description": "ለስቴኪንግ ፈሳሽነት የተነደፈ ፓራቼይን። ተጠቃሚዎች ክሪፕቶ ምንዛሬዎችን ስቴክ እንዲያደርጉ እና በምላሹ ፈሳሽ vTokens እንዲቀበሉ ያስችላቸዋል።" }
+    },
+    "gov": {
+      "polkassembly": { "title": "Polkassembly", "description": "በፖልካዶት እና በኩሳማ ሥነ-ምህዳሮች ላይ በአስተዳደር ሀሳቦች ላይ ለመወያየት እና ድምጽ ለመስጠት መድረክ።" },
+      "portal": { "title": "Polkadot Governance", "description": "በፖልካዶት አስተዳደር ውስጥ ለመሳተፍ ይፋዊ ማዕከል፣ ከህዝበ ውሳኔ እስከ የምክር ቤት ምርጫ እና የግምጃ ቤት ሀሳቦች።" },
+      "treasury": { "title": "Polkadot Treasury", "description": "ሥነ-ምህዳሩን በሚጠቅሙ ፕሮጀክቶች ላይ ሊወጣ የሚችል፣ በአውታረ መረብ ክፍያዎች ስለሚደገፈው በሰንሰለት-ላይ ስላለው ግምጃ ቤት ይወቁ።" },
+      "opengov": { "title": "OpenGov", "description": "የፖልካዶትን የቀጣይ-ትውልድ የአስተዳደር ሞዴል (Gov2) ያስሱ፣ የበለጠ ያልተማከለ እና ቀልጣፋ እንዲሆን የተነደፈ።" }
     }
   },
   "chat": {
